--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/slider": "^4.5.5",
-    "@react-native-picker/picker": "^2.9.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
@@ -21,14 +21,16 @@
     "expo-linear-gradient": "^14.0.1",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-color-picker": "^0.6.0",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-picker-select": "^9.3.1",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.3.0",
+    "react-native-reanimated": "^3.16.5",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-svg": "^15.10.1",
+    "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
